--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
 <h1>Le groupe</h1>
+<p>Le groupe est l'importance même de la formation simplon.</p>
 
                                 
 </body>
