--- a/test.html
+++ b/test.html
@@ -13,6 +13,13 @@
       <li>register</li>
       <li>connection</li>
     </ul>
+    <div><h2>Internat collège</h2>
+    <p>
+        <br>Les dortoirs des grands sont situés dans les cimes de Sainte-Marie, au 3e étage.
+        <br>17 chambres accueillent les garçons (capacité d’accueil : 60 internes). Il s’agit de chambres de 2, 3, 4 ou 5 internes. Le dortoir est encadré par les chambres du responsable de l’internat et d’un éducateur animateur qui sont présents toutes les nuits.
+        <br>Les filles se partagent 14 chambres accueillant chacune 4 internes. Deux petites chambres supplémentaires sont occupées par les éducatrices animatrices.
+        <br>Des espaces détente et une petite médiathèque offrent aux jeunes des lieux pour passer du bon temps.
+    </p></div>
   </header>
 </body>
 </html>
